adds new endpoint and integration tests and fixes code to make them pass